# fastapi-template

./: .env.example  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 1ca760c2c9f8_.py  81a3d868d049_.py  8cfef0b1f5d7_.py  8ef06a5ba21f_.py  9b73c88e1dc6_.py  cae54ffd3985_.py
src/: database.py  env.py  main.py  models.py
src/dependencies/: auth_dependencies.py  auth_dependency.py  category_dependency.py  file_dependencies.py  item_dependency.py  jwt_dependencies.py  pagination_dependency.py  s3_dependencies.py  session_dependency.py  user_dependency.py
src/middlewares/: logger.py
src/routes/: auth_routes.py  category_routes.py  item_routes.py  media_routes.py  user_routes.py
src/schemas/: __init__.py  auth.py  category.py  item.py  media.py  user.py
src/services/: auth_service.py  category_service.py  item_service.py  password_service.py  s3_service.py  user_service.py
src/types/: jwt_sub.py  media_types.py
